--- a/style.css
+++ b/style.css
@@ -635,6 +635,15 @@ color: #f0f0f0;
     filter: blur(0rem);
     transition: 0.6s ease;
   }
+  .textoindex{
+    display: none;
+  }
+  .textoindexfoto{
+    position: relative;
+    width: 1rem;
+    height: auto;
+  }
+
 }
 
 @media screen and (min-width: 1024px){
