--- a/style.css
+++ b/style.css
@@ -393,8 +393,9 @@ color: blue;
   }
 
   .containercurriculum{
-    
     height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
     overflow-y: scroll;
     z-index: 2;
     padding-bottom:5rem;
@@ -430,8 +431,8 @@ color: blue;
 
 .textoscroll {
   width: 100%;
-  margin-top:2em;
-  font-size: 10rem;
+  margin-top:3rem;
+  font-size: 8rem;
   color:blue;
   z-index:-10;
   position: fixed;
@@ -440,6 +441,9 @@ color: blue;
  }
  .contenidosbio{
    background-color: #ffffff;
+   
+   width: 100%;
+   overflow-x: hidden;
  }
  
 
@@ -667,6 +671,19 @@ color: #f0f0f0;
     font-size: 3rem;
     font-weight: 400;
   }
+
+
+  .navbarfix:hover{
+  filter: drop-shadow(0px 5px 10px #00ff00);
+  transform:scale(1);
+  color:#00ff00;
+  width:5em;
+  margin-inline: 1em;
+  padding-block: 0.7em;
+  font-size: 1em;
+  border-radius:10rem;
+}
+
 }
 
 @media screen and (min-width: 1024px){
